[package]
name = "editor"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
egui = "0.28.1"
image = "0.25.1"
wz_reader = { path = "../wz-reader-rs", features = ["json", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
font-kit = "0.14.2"
clipboard-rs = "0.1.11"
